objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Basic_Pay_in_INR__c</fullName>
        <formula>Proposed_CTC_in_INR__c *(50/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basic Pay (in INR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Provident_Fund_in_INR__c</fullName>
        <label>Employee Provident Fund (in INR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HRA_in_INR__c</fullName>
        <formula>Proposed_CTC_in_INR__c *(20/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HRA (in INR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interviewer_s_Feedback__c</fullName>
        <description>Evaluation by the interviewer</description>
        <label>Interviewer&apos;s Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meal_Card_in_INR__c</fullName>
        <label>Meal Card (in INR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_CTC_in_INR__c</fullName>
        <description>Field for storing proposed CTC</description>
        <label>Proposed CTC (in INR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Allowance_in_INR__c</fullName>
        <formula>Proposed_CTC_in_INR__c -( Basic_Pay_in_INR__c  +  HRA_in_INR__c  +  Variable_Pay_in_INR__c  +  Meal_Card_in_INR__c   + Employee_Provident_Fund_in_INR__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Allowance (in INR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Application Status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Under Prequalification</fullName>
                    <label>1️⃣ Phone Call</label>
                </value>
                <value>
                    <fullName>AptitudeTest</fullName>
                    <label>1️⃣ Aptitude Test</label>
                </value>
                <value>
                    <fullName>Ongoing HR Interview</fullName>
                    <label>2️⃣ HR Interview</label>
                </value>
                <value>
                    <fullName>TechnicalInterview</fullName>
                    <label>2️⃣ Technical Interview</label>
                </value>
                <value>
                    <fullName>Ongoing Technical Interview</fullName>
                    <label>3️⃣ Operational Interview</label>
                </value>
                <value>
                    <fullName>ManagerialInterview</fullName>
                    <label>3️⃣ Managerial Interview</label>
                </value>
                <value>
                    <fullName>HRInterviewIndia</fullName>
                    <label>4️⃣ HR Interview</label>
                </value>
                <value>
                    <fullName>Ongoing Final Interview</fullName>
                    <label>4️⃣ Final Interview</label>
                </value>
                <value>
                    <fullName>Offer Accepted</fullName>
                    <label>✅ Hired</label>
                </value>
                <value>
                    <fullName>Joined</fullName>
                    <label>✅Joined</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <label>❌ Cancelled</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <label>❌ Rejected</label>
                </value>
                <value>
                    <fullName>Offer Declined</fullName>
                    <isActive>false</isActive>
                    <label>Offer Declined</label>
                </value>
                <value>
                    <fullName>Offer Sent</fullName>
                    <isActive>false</isActive>
                    <label>Offer Sent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Variable_Pay_in_INR__c</fullName>
        <formula>Proposed_CTC_in_INR__c *(8.33/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variable Pay (in INR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>